Fixed mail signup text visibility

--- a/airbitz/airbitz/static/less/home.less
+++ b/airbitz/airbitz/static/less/home.less
@@ -285,6 +285,8 @@ body.home {
                         display: block !important;
                         margin: 5px auto;
                         text-align: center;
+                        color: #ffffff;
+                        text-shadow: 1px 0 1px #000;
                     }
                     .form-control {
                         text-align: center;
